--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=تصميم CSS متقدم
 advanced-file-system-store-configuration-name=مخزن نظام الملفات المتقدم
 advanced-properties=خصائص متقدمة
 advanced-reply=رد متقدم
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=تحديد متقدم
 advanced-styling=تصميم متقدم
 aes256-key=مفتاح AES-256
