--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Разширени CSS стилове
 advanced-file-system-store-configuration-name=Разширено хранилище на файлова система (Automatic Translation)
 advanced-properties=Разширени свойства (Automatic Translation)
 advanced-reply=Разширен отговор (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Разширен избор (Automatic Translation)
 advanced-styling=Разширени стилове
 aes256-key=AES-256 ключ (Automatic Translation)
