--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Estils CSS avançats
 advanced-file-system-store-configuration-name=Sistema d'emmagatzematge d'arxius avançat
 advanced-properties=Propietats avançades
 advanced-reply=Resposta avançada
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Selecció avançada
 advanced-styling=Estils avançats
 aes256-key=Clau AES-256
