--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Pokročilé styly CSS
 advanced-file-system-store-configuration-name=Advanced File System Store (Automatic Copy)
 advanced-properties=Pokročilé nastavení
 advanced-reply=Advanced Reply (Automatic Copy)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Rozšířený výběr
 advanced-styling=Pokročilé styly
 aes256-key=AES-256 Key (Automatic Copy)
