--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Avanceret CSS formatering
 advanced-file-system-store-configuration-name=Avanceret filsystemlager (Automatic Translation)
 advanced-properties=Avancerede egenskaber
 advanced-reply=Avanceret svar (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Advanced Selection (Automatic Copy)
 advanced-styling=Avanceret formatering
 aes256-key=AES-256-nøgle (Automatic Translation)
