--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Erweitertes CSS-Styling
 advanced-file-system-store-configuration-name=Erweiterter File System Store
 advanced-properties=Erweiterte Eigenschaften
 advanced-reply=Erweiterte Antwort
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Erweiterte Auswahl
 advanced-styling=Erweitertes Styling
 aes256-key=AES-256-Schlüssel
