--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Detailne kujunduse CSS
 advanced-file-system-store-configuration-name=Täpsem failisüsteemi pood (Automatic Translation)
 advanced-properties=Detailsemad omadused
 advanced-reply=Täpsem vastus (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Täpsem valik (Automatic Translation)
 advanced-styling=Täiustatud kujundus
 aes256-key=AES-256 võti (Automatic Translation)
