--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=CSS estilo aurreratuak
 advanced-file-system-store-configuration-name=Advanced File System Store (Automatic Copy)
 advanced-properties=Propietate aurreratuak
 advanced-reply=Erantzun aurreratua
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Advanced Selection (Automatic Copy)
 advanced-styling=Estilo aurreratuak
 aes256-key=AES-256 Key (Automatic Copy)
