--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=استایل css پیشرفته
 advanced-file-system-store-configuration-name=ذخیره فایل‌های سیستم به صورت پیشرفته
 advanced-properties=ویژگی‌های پیشرفته
 advanced-reply=پاسخ پیشرفته
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=انتخاب پیشرفته
 advanced-styling=استایل‌های پیشرفته
 aes256-key=AES-256 کلید (Automatic Translation)
