--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=CSS-lisäasetukset
 advanced-file-system-store-configuration-name=Kehittynyt tiedostojärjestelmäsäiliö
 advanced-properties=Lisäominaisuudet
 advanced-reply=Edistynyt Vastaus
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Erikoisvalinta
 advanced-styling=Lisätyylit
 aes256-key=AES-256-avain
