--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Formatage CSS avancé
 advanced-file-system-store-configuration-name=Stockage avancé du système de fichier
 advanced-properties=Propriétés avancées
 advanced-reply=Réponse avancée
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Sélection avancée
 advanced-styling=Style avancé
 aes256-key=Clé AES-256
