--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Estilos CSS avanzados
 advanced-file-system-store-configuration-name=Advanced File System Store (Automatic Copy)
 advanced-properties=Propiedades avanzadas
 advanced-reply=Resposta avanzada
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Advanced Selection (Automatic Copy)
 advanced-styling=Estilos avanzados
 aes256-key=AES-256 Key (Automatic Copy)
