--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=उन्नत सीएसएस स्टाइलिं
 advanced-file-system-store-configuration-name=एडवांस्ड फाइल सिस्टम स्टोर (Automatic Translation)
 advanced-properties=उन्नत गुण (Automatic Translation)
 advanced-reply=उन्नत उत्तर (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=उन्नत चयन (Automatic Translation)
 advanced-styling=उन्नत स्टाइलिंग (Automatic Translation)
 aes256-key=एईएस-256 कुंजी (Automatic Translation)
