--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Napredno CSS stiliziranje
 advanced-file-system-store-configuration-name=Advanced File System Store (Automatic Copy)
 advanced-properties=Napredna svojstva
 advanced-reply=Advanced Reply (Automatic Copy)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Napredni izbor
 advanced-styling=Napredno stiliziranje
 aes256-key=AES-256 Key (Automatic Copy)
