--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=További CSS stílusok
 advanced-file-system-store-configuration-name=Haladó fájlrendszer tároló
 advanced-properties=További tulajdonságok
 advanced-reply=Speciális válasz
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Összetett kiválasztás
 advanced-styling=További stílusok
 aes256-key=AES-256 kulcs
