--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Lanjutan CSS Styling
 advanced-file-system-store-configuration-name=Penyimpanan Sistem Berkas Tingkat Lanjut (Automatic Translation)
 advanced-properties=Properti Lanjutan
 advanced-reply=Balasan Tingkat Lanjut (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Seleksi Tingkat Lanjut (Automatic Translation)
 advanced-styling=Lanjutan Styling
 aes256-key=Kunci AES-256 (Automatic Translation)
