--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Stili CSS Avanzati
 advanced-file-system-store-configuration-name=File System Store Avanzato
 advanced-properties=Proprietà Avanzate
 advanced-reply=Risposta avanzata
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Selezione Avanzata
 advanced-styling=Stili Avanzati
 aes256-key=Chiave AES-256
