--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=עיצוב CSS מתקדם
 advanced-file-system-store-configuration-name=אחסון מערכת קבצים מתקדמת
 advanced-properties=מאפיינים מתקדמים
 advanced-reply=תגובה מתקדמת
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=בחירה מתקדמת
 advanced-styling=עיצוב מתקדם
 aes256-key=מקש AES-256 (Automatic Translation)
