--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=詳細なCSS記述
 advanced-file-system-store-configuration-name=高度なファイルシステムストア
 advanced-properties=詳細プロパティ
 advanced-reply=詳細な返信
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=詳細選択
 advanced-styling=詳細設定
 aes256-key=AES-256 キー
