--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=고급 CSS 스타일
 advanced-file-system-store-configuration-name=고급 파일 시스템 저장소
 advanced-properties=고급 속성
 advanced-reply=상세 응답
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=상세 선택
 advanced-styling=고급 스타일
 aes256-key=AES-256 키
