--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=ຮູບແບບ CSS ຂັ້ນສູງ
 advanced-file-system-store-configuration-name=Advanced File System Store (Automatic Copy)
 advanced-properties=ຄຸນລັກສະນະຂັ້ນສູງ
 advanced-reply=Advanced Reply (Automatic Copy)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Advanced Selection (Automatic Copy)
 advanced-styling=ຮູບແບບຂັ້ນສູງ
 aes256-key=AES-256 Key (Automatic Copy)
