--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Išplėstinė CSS stilius (Automatic Translation)
 advanced-file-system-store-configuration-name=Išplėstinė failų sistemos saugykla (Automatic Translation)
 advanced-properties=Išplėstinės ypatybės (Automatic Translation)
 advanced-reply=Išplėstinis atsakymas (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Išplėstinis pasirinkimas (Automatic Translation)
 advanced-styling=Pažangus stilius (Automatic Translation)
 aes256-key=AES-256 raktas (Automatic Translation)
