--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Gaya CSS Lanjutan (Automatic Translation)
 advanced-file-system-store-configuration-name=Stor Sistem Fail Lanjutan (Automatic Translation)
 advanced-properties=Hartanah Lanjutan (Automatic Translation)
 advanced-reply=Jawapan Lanjutan (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Pilihan Lanjutan (Automatic Translation)
 advanced-styling=Gaya Lanjutan (Automatic Translation)
 aes256-key=Kekunci AES-256 (Automatic Translation)
