--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Avansert CSS-stil
 advanced-file-system-store-configuration-name=Avansert filsystemlager (Automatic Translation)
 advanced-properties=Avanserte egenskaper
 advanced-reply=Avansert svar
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Avansert utvalg
 advanced-styling=Avanserte stilalternativ
 aes256-key=AES-256 Nøkkel (Automatic Translation)
