--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Geavanceerde CSS-styling
 advanced-file-system-store-configuration-name=Geavanceerd bestandssysteem opslaan
 advanced-properties=Geavanceerde eigenschappen
 advanced-reply=Geavanceerd antwoord
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Uitgebreide selectie
 advanced-styling=Geavanceerde styling
 aes256-key=AES-256-code
