--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Zaawansowane style CSS
 advanced-file-system-store-configuration-name=Zaawansowany magazyn plików (Automatic Translation)
 advanced-properties=Zaawansowane właściwości
 advanced-reply=Odpowiedź zaawansowana (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Zaawansowane wybieranie
 advanced-styling=Zaawansowane style
 aes256-key=Klucz AES-256 (Automatic Translation)
