--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Estilo avançado de CSS
 advanced-file-system-store-configuration-name=Armazenamento Avançado de Sistema de Arquivos
 advanced-properties=Propriedades Avançadas
 advanced-reply=Resposta avançada
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Seleção avançada
 advanced-styling=Estilo avançado
 aes256-key=Chave AES-256
