--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Personalização Avançada de CSS
 advanced-file-system-store-configuration-name=Armazenamento avançado de sistema de ficheiros
 advanced-properties=Propriedades Avançadas
 advanced-reply=Resposta Avançada (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Selecção Avançada
 advanced-styling=Personalização Avançada
 aes256-key=Chave AES-256 (Automatic Translation)
