--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Stilăre CSS Avansate
 advanced-file-system-store-configuration-name=Depozit complex de sisteme de fișiere (Automatic Translation)
 advanced-properties=Proprietăți Avansate
 advanced-reply=Răspuns avansat (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Selecție complexă (Automatic Translation)
 advanced-styling=Stilare Avansată
 aes256-key=Cheie AES-256 (Automatic Translation)
