--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Дополнительные стили CSS
 advanced-file-system-store-configuration-name=Расширенный магазин файловой системы (Automatic Translation)
 advanced-properties=Дополнительные свойства
 advanced-reply=Расширенный ответ (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Расширенное выделение
 advanced-styling=Дополнительные стили
 aes256-key=AES-256 Ключ (Automatic Translation)
