--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Rozšírene CSS štýlovanie
 advanced-file-system-store-configuration-name=Rozšírené úložisko súborového systému
 advanced-properties=Pokročilé vlastnosti
 advanced-reply=Rozšírená odpoveď (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Rozšírený výber
 advanced-styling=Rozšírené štýlovanie
 aes256-key=Kľúč AES-256 (Automatic Translation)
