--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Napredno oblikovanje CSS
 advanced-file-system-store-configuration-name=Napredna trgovina datotečni sistem (Automatic Translation)
 advanced-properties=Napredne lastnosti
 advanced-reply=Napredni odgovor (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Napredni izbor (Automatic Translation)
 advanced-styling=Napredno oblikovanje
 aes256-key=Ključ AES-256 (Automatic Translation)
