--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Напредни CSS Стил
 advanced-file-system-store-configuration-name=Advanced File System Store (Automatic Copy)
 advanced-properties=Напредна Својства
 advanced-reply=Advanced Reply (Automatic Copy)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Advanced Selection (Automatic Copy)
 advanced-styling=Напредни Стил
 aes256-key=AES-256 Key (Automatic Copy)
