--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Avancerad CSS-stil
 advanced-file-system-store-configuration-name=Avancerat filsystemlager
 advanced-properties=Avancerade egenskaper
 advanced-reply=Avancerat svar
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Avancerat val
 advanced-styling=Avancerade stilalternativ
 aes256-key=AES-256-nyckel
