--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=மேம்பட்ட CSS ஸ்டைலிங்
 advanced-file-system-store-configuration-name=Advanced File System Store (Automatic Copy)
 advanced-properties=மேம்பட்ட குணங்கள்
 advanced-reply=மேம்பட்ட பதில்
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=மேம்பட்ட தேர்வு
 advanced-styling=Advanced Styling (Automatic Copy)
 aes256-key=AES-256 Key (Automatic Copy)
