--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=แอดวานซ์ CSS สไตล์ลิ่ง
 advanced-file-system-store-configuration-name=แอดวานซ์ไฟล์ซิสเต็มสโตร์
 advanced-properties=แอดวานซ์พร็อพเพอตี้
 advanced-reply=ตอบกลับขั้นสูง
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=แอดวานซ์ซีเลคชั่น
 advanced-styling=แอดวานซ์สไตล์ลิ่ง
 aes256-key=AES-256 คีย์
