--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=İleri CSS Biçimlendirmesi
 advanced-file-system-store-configuration-name=Gelişmiş Dosya Sistemi Deposu (Automatic Translation)
 advanced-properties=Gelişmiş Özellikler
 advanced-reply=Gelişmiş Yanıt (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Gelişmiş Seçim (Automatic Translation)
 advanced-styling=İleri Biçimlendirme
 aes256-key=AES-256 Tuşu (Automatic Translation)
