--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Розширені стилі CSS
 advanced-file-system-store-configuration-name=Розширене сховище файлової системи (Automatic Translation)
 advanced-properties=Додаткові властивості (Automatic Translation)
 advanced-reply=Додаткова відповідь (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Розширений вибір (Automatic Translation)
 advanced-styling=Розширені стилі
 aes256-key=Ключ AES-256 (Automatic Translation)
