--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Kiểu dáng CSS nâng cao
 advanced-file-system-store-configuration-name=Lưu trữ Hệ thống Tệp Nâng cao (Automatic Translation)
 advanced-properties=Tính năng cấp cao
 advanced-reply=Trả lời Nâng cao (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Lựa chọn nâng cao
 advanced-styling=Kiểu nâng cao
 aes256-key=Khóa AES-256 (Automatic Translation)
