--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=高级CSS样式
 advanced-file-system-store-configuration-name=高级的文件系统存储
 advanced-properties=高级属性
 advanced-reply=高级回复
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=高级选择
 advanced-styling=高级样式
 aes256-key=AES-256 密钥
