--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=進階CSS格式
 advanced-file-system-store-configuration-name=進階檔案系統存儲
 advanced-properties=進階屬性
 advanced-reply=進階回覆
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=進階選項
 advanced-styling=進階格式
 aes256-key=AES-256 金鑰
