--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Προχωρημένος ορισμός στυλ με css
 advanced-file-system-store-configuration-name=Χώρος αποθήκευσης συστήματος αρχείων για προχωρημένους (Automatic Translation)
 advanced-properties=Προχωρημένες ιδιότητες
 advanced-reply=Προηγμένη απάντηση (Automatic Translation)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Επιλογή για προχωρημένους (Automatic Translation)
 advanced-styling=Προχωρημένος ορισμός στυλ
 aes256-key=Κλειδί AES-256 (Automatic Translation)
