--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Advanced CSS Styling (Automatic Copy)
 advanced-file-system-store-configuration-name=Advanced File System Store (Automatic Copy)
 advanced-properties=Advanced Properties (Automatic Copy)
 advanced-reply=Advanced Reply (Automatic Copy)
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Advanced Selection (Automatic Copy)
 advanced-styling=Advanced Styling (Automatic Copy)
 aes256-key=AES-256 Key (Automatic Copy)
