--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Estilos CSS avanzados
 advanced-file-system-store-configuration-name=Sistema de almacenamiento avanzado de archivos
 advanced-properties=Propiedades avanzadas
 advanced-reply=Respuesta avanzada
+advanced-rule=Advanced Rule (Automatic Copy)
 advanced-selection=Selección avanzada
 advanced-styling=Estilos avanzados
 aes256-key=Clave AES-256
