LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -3058,7 +3058,7 @@ channel-id=Kanal-ID
 channel-name=Kanalname
 channel-selected=Kanal ausgewählt
 channels=Kanäle
-channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
+channels-tab-description=Kanäle können immer nur einer Eigenschaft zugewiesen werden. Sites, die zu einem Kanal gehören, werden automatisch ausgewählt, wenn ein Kanal ausgewählt wurde.
 chapter=Kapitel
 chapters=Kapitel
 character-options=Zeichenoptionen
@@ -14975,7 +14975,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Sites - Startseite
 sites-joined=Sites, denen ich beigetreten bin
 sites-owned=Sites, die ich besitze
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
+sites-tab-description=Sites können immer nur einer einzigen Eigenschaft zugewiesen werden. Alle gewünschten Sites müssen einzeln ausgewählt werden, einschließlich derjenigen, die in einer untergeordneten Beziehung zu übergeordneten Sites stehen. Sites, die zu einem Kanal gehören, sind erforderlich, bis die Auswahl des Kanals aufgehoben wird.
 sites-that-i-administer=Sites, die ich administriere
 sites-to-sync-x=Zu synchronisierende Sites - {0}
 size=Größe
