--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -3058,7 +3058,7 @@ channel-id=ID de canal
 channel-name=Nom du canal
 channel-selected=Canal sélectionné
 channels=Canaux
-channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
+channels-tab-description=Les canaux ne peuvent être attribués qu'à une seule propriété à la fois. Les sites appartenant à un canal seront automatiquement sélectionnés lorsqu'un canal aura été sélectionné.
 chapter=Chapitre
 chapters=Chapitres
 character-options=Options de caractère
@@ -14975,7 +14975,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Page d'accueil des sites
 sites-joined=Sites que j'ai rejoint
 sites-owned=Sites qui m'appartiennent
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
+sites-tab-description=Les sites ne peuvent être attribués qu'à une seule propriété à la fois. Tous les sites souhaités doivent être sélectionnés individuellement, y compris ceux qui ont une relation enfant avec les sites parents. Les sites appartenant à un canal sont requis jusqu'à ce que le canal soit désélectionné.
 sites-that-i-administer=Sites que j'administre
 sites-to-sync-x=Sites à synchroniser - {0}
 size=Taille
