--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -3058,7 +3058,7 @@ channel-id=Kanal-ID
 channel-name=Kanalnamn
 channel-selected=Kanal vald
 channels=Kanaler
-channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
+channels-tab-description=Kanaler kan bara tilldelas till en resurs åt gången. Webbplatser som tillhör en kanal väljs automatiskt när en kanal har valts.
 chapter=Kapitel
 chapters=Kapitel
 character-options=Teckenalternativ
@@ -14973,7 +14973,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Webbplatsers startsida
 sites-joined=Platser jag har gått med i
 sites-owned=Platser jag äger
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
+sites-tab-description=Webbplatser kan bara tilldelas till en resurs åt gången. Alla önskade webbplatser måste väljas individuellt, inklusive de som har underordnade relationer till överordnade webbplatser. Webbplatser som tillhör en kanal krävs tills kanalen avmarkeras.
 sites-that-i-administer=Webbplatser som jag administrerar
 sites-to-sync-x=Platser att synkronisera - {0}
 size=Storlek
