--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -3058,7 +3058,7 @@ channel-id=渠道 ID
 channel-name=渠道名称
 channel-selected=已选择渠道
 channels=渠道
-channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
+channels-tab-description=渠道一次只可以分配至一个属性。选择渠道后，将自动选择属于该渠道的站点。
 chapter=章节
 chapters=章节
 character-options=字符选项
@@ -14975,7 +14975,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=站点主页
 sites-joined=我加入的站点
 sites-owned=我拥有的站点
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
+sites-tab-description=站点一次只可以分配至一个属性。所有必需站点都必须单独选择，包括那些与父站点存在子关系的站点。在取消选择渠道之前，属于该渠道的站点是必需的。
 sites-that-i-administer=我管理的站点
 sites-to-sync-x=要同步的站点 - {0}
 size=大小
