--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -3058,7 +3058,7 @@ channel-id=معرف القناة
 channel-name=اسم القناة
 channel-selected=القناة المحددة
 channels=القنوات
-channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
+channels-tab-description=يمكن تعيين القنوات إلى منشأة واحدة في المرة. وسوف يتم تلقائيًا اختيار المواقع التي تنتمي للقناة عند تحديد القناة.
 chapter=فصل
 chapters=فصول
 character-options=خيارات الحروف
@@ -14973,7 +14973,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=رئيسية المواقع
 sites-joined=المواقع التي اشتركت بها
 sites-owned=مواقع أملكها
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
+sites-tab-description=يمكن تعيين المواقع إلى منشأة واحدة في المرة. يجب تحديد جميع المواقع المرغوبة فرديًا، يشمل ذلك تلك التي تربطها علاقات فرعية بالمواقع الأصل. وتكون المواقع المرتبطة بالقناة مطلوبة حتى إلغاء تحديد القناة.
 sites-that-i-administer=المواقع التي أديرها
 sites-to-sync-x=المواقع المطلوب مزامنتها - {0}
 size=الحجم
